fixed teamName route. needs to be aligned

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@ body{
 }
 
 .teamNames {
-    text-align: center;;
+    text-align: center;
 }
 
 .teamLogoButton {
